Project

General

Profile

Actions

Bug #10422

closed

RDoc for BasicObject has methods that do not exist

Bug #10422: RDoc for BasicObject has methods that do not exist

Added by sawa (Tsuyoshi Sawada) almost 12 years ago. Updated about 7 years ago.

Status:
Closed
Target version:
-
ruby -v:
2.1.3
[ruby-core:65868]

Description

RDoc for BasicObject (http://www.ruby-doc.org/core-2.1.3/BasicObject.html) has descriptions for methods object_id and send, which do not exist. Also, send and __send__ are listed twice.

Actions

Also available in: PDF Atom