Document BasicObject does not implement #object_id and #send [ci skip]

Fixes [Bug #10422]